--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
-    "xlsx": "^0.14.0"
+    "data-validation-xlsx": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
